# agentic-test

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: mcp-testing-guide.md  openapi.json  openapi.yaml
playwright/: package-lock.json  package.json  playwright.config.ts
playwright/tests/api/: messages.spec.ts
prompts/: playwright_api_test_generation.md
scripts/: export_openapi.py  run-api-for-playwright.sh
src/agentic_test/: __init__.py  __main__.py  config.py  main.py
src/agentic_test/ai_api_tester/: __init__.py  config.py  docker_manager.py  errors.py  generator.py  handlers.py  introspection.py  paths.py  result_parser.py  runner.py  server.py  workspace.py
src/agentic_test/api/: app.py  cli.py
src/agentic_test/api/routes/: messages.py
src/agentic_test/microblog/: __init__.py  deps.py  repository.py  schemas.py
tests/: conftest.py  test_api.py  test_main.py  test_repository.py  test_schemas.py
tests/ai_api_tester/: test_docker_manager.py  test_generator.py  test_handlers_integration.py  test_paths.py  test_result_parser.py  test_runner.py  test_server_smoke.py  test_workspace.py
tests/handwritten_api/: test_handwritten_stub.py
